bk-ci/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bk-ci
  labels:
    app: bk-ci
spec:
  selector:
    matchLabels:
      app: bk-ci
  replicas: 1
  template:
    metadata:
      labels:
        app: bk-ci
    spec:
      containers:
        - name: bk-ci
          image: blueking/bk-ci
          ports:
            - containerPort: 80
