bk-ci/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: bk-ci
  labels:
    app: bk-ci
spec:
  selector:
    app: bk-ci
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
