bk-ci/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bk-ci
spec:
  rules:
    - host: devops.bk.cloud.tencent.com
      http:
        paths:
          - backend:
              serviceName: bk-ci
              servicePort: 80
